# monarch-access

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MCP-SERVER.md  Makefile  README.md  cli.py  gapp.yaml  pyproject.toml  server-stdio.py  server.py
docs/: CLAUDE-CODE.md  GEMINI-CLI.md  RECURRING.md  RESEARCH-RECURRING.md  TOOLS.md
monarch/: __init__.py  accounts.py  categories.py  cli.py  client.py  config.py  net_worth.py  queries.py  recurring.py  transactions.py
monarch/mcp/: __init__.py  server.py
monarch/providers/: __init__.py  base.py
monarch/providers/api/: __init__.py  provider.py
monarch/providers/local/: __init__.py  provider.py
monarch/transactions/: __init__.py  common.py  get.py  list.py  update.py
tests/: conftest.py  generate_test_data.py  test_accounts.py  test_categories.py  test_recurring.py  test_transactions_create.py  test_transactions_get.py  test_transactions_list.py  test_transactions_update.py
tests/fixtures/: test_data_seed.json
tests/integration/: __init__.py  test_live_reads.py
