[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monarch-access"
version = "0.2.0"
description = "Lightweight CLI and Python SDK for accessing Monarch Money financial data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "click>=8.0.0",
    "tinydb>=4.8.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
http = [
    "uvicorn>=0.30.0",
]

[project.scripts]
monarch = "monarch.cli:cli"
monarch-mcp = "monarch.mcp.server:run_server"

[project.urls]
Homepage = "https://github.com/krisrowe/monarch-access"
Repository = "https://github.com/krisrowe/monarch-access"

[tool.setuptools.packages.find]
include = ["monarch*"]

[tool.pytest.ini_options]
# Only run unit tests by default. Integration tests require live credentials.
# Run integration tests with: pytest tests/integration/ -v
testpaths = ["tests"]
addopts = "--ignore=tests/integration"
asyncio_mode = "auto"
